--- a/bikePrediction.ipynb
+++ b/bikePrediction.ipynb
@@ -21,10 +21,34 @@
     },
     "colab": {
       "name": "bikePrediction.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dodgerjam/Bikes/blob/master/bikePrediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GLRZD0NMywxV"
+      },
+      "source": [
+        "# Predicting TFL Bike Usage\n",
+        "\n",
+        "Using a dataset from the TFL website, I will present a simple mathematical model to predict the usage of the Santander (Boris) Bikes.\n",
+        "\n",
+        "Since I downloaded the dataset, the TFL website has changed and I can't find the source anymore. The [cycling dataset website](https://cycling.data.tfl.gov.uk/)  is now a bit messy, but fortunately you can access it through my [Github](https://https://github.com/dodgerjam/Bikes/blob/master/TFLBikes.xls) - along with this notebook."
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -58,7 +82,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +177,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +283,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,7 +399,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -502,7 +526,7 @@
         "\n",
         "fig.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -615,7 +639,7 @@
         "        )\n",
         ")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -759,7 +783,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +919,7 @@
         "        )\n",
         ")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1043,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1176,7 +1200,7 @@
         "\n",
         "df = linRegModel(simpleFeatures, df)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,7 +1279,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1352,7 +1376,7 @@
         "\n",
         "df = linRegModel(linearFeatures, df)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1462,7 +1486,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1563,7 +1587,7 @@
         "print('Outliers per weekday-month')\n",
         "print(df[(cond1) | (cond2)]['Day'].apply(lambda x: \"{0}-{1}\".format(x.dayofweek, x.month)).value_counts().head(10))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1663,7 +1687,7 @@
         "fig = px.box(df.sort_values(\"MonthNumber\"), x=\"Month\", y='Number of Bicycle Hires', color = \"Month\",color_discrete_sequence=px.colors.qualitative.Dark24)\n",
         "fig.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1776,7 +1800,7 @@
         "fig = px.box(df.sort_values('WeekdayNumber'), x=\"Weekday\", y='Number of Bicycle Hires', color = \"Weekday\",color_discrete_sequence=px.colors.qualitative.Dark24)\n",
         "fig.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1882,7 +1906,7 @@
         "])\n",
         "outliers "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2072,7 +2096,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2179,7 +2203,7 @@
         "))\n",
         "fig.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2272,7 +2296,7 @@
         "fig.update_layout(title = 'Test Rolling Average (365 Days) Error')\n",
         "fig.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2396,7 +2420,7 @@
         "\n",
         "fig.show()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
